# AI-Waifu-Project-LaIN

./: .gitignore  CMakeLists.txt  LICENSE  aec_module.py  asr_module.py  config.example.yaml  config.json  config.yaml  deepseek_module.py  functioncall_module.py  history_module.py  lettaModel_module.py  lipsync_module.py  live2d_module.py  logging_config.py  main.cpp  main.py  mainwindow.ui  mem0_module.py  micButton_module.py  model_module.py  ollamaModel_module.py  openaiTypeModel_module.py  openaiType_module.py  prompt_sample.md  readme.md  replyParser_module.py  requirements.txt  setup.bat  tachie.qrc  tempCodeRunnerFile.py  tempCodeRunnerFile.python  test_lipsync.py  test_main.py  test_streaming.py  time_module.py  ui_module.py  vits_module.py  vpr_module.py  whisperStream_module.py  (+1 more)
.history/: config_20250101182214.json  config_20250101182257.json  config_20250101182343.json  config_20250101182624.json  config_20250101182700.json  config_20250101182722.json  config_20250101182728.json  config_20250101182742.json  config_20250101182959.json  config_20250101183010.json  config_20250101183145.json  config_20250101183224.json  config_20250101183901.json  config_20250101184336.json  config_20250101184910.json  config_20250101184929.json  config_20250101185622.json  config_20250101185844.json  config_20250101190047.json  config_20250101192149.json  config_20250101192156.json  config_20250101192731.json  config_20250101192741.json  config_20250101192806.json  config_20250101192901.json  config_20250101192909.json  config_20250101205412.json  config_20250101205417.json  (+675 more)
(+31 files in other folders)
